--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: log_print
 description: A Flutter package for managing consol printing in debug mode and release mode and colorful just for VSCode.
 version: 0.0.1
-homepage:
+homepage: "https://github.com/smae1993/log_print"
 
 environment:
   sdk: '>=2.17.5 <3.0.0'
